--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Simple-ios-style-toggle-switch-with-css3-jquery : all animation control by css3 translate, really smooth than css-position">
+    <title>Simple-ios-style-toggle-switch-with-css3-jquery by leafiy</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Simple-ios-style-toggle-switch-with-css3-jquery</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
+    <div class="wrapper">
+      <header>
+        <h1>Simple-ios-style-toggle-switch-with-css3-jquery</h1>
+        <p>all animation control by css3 translate, really smooth than css-position</p>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/leafiy/Simple-iOS-style-Toggle-Switch-with-CSS3-jquery">View on GitHub</a>
+        <p class="view"><a href="https://github.com/leafiy/Simple-iOS-style-Toggle-Switch-with-CSS3-jquery">View the Project on GitHub <small>leafiy/Simple-iOS-style-Toggle-Switch-with-CSS3-jquery</small></a></p>
 
-          <h1 id="project_title">Simple-ios-style-toggle-switch-with-css3-jquery</h1>
-          <h2 id="project_tagline">all animation control by css3 translate, really smooth than css-position</h2>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/leafiy/Simple-iOS-style-Toggle-Switch-with-CSS3-jquery/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/leafiy/Simple-iOS-style-Toggle-Switch-with-CSS3-jquery/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+        <ul>
+          <li><a href="https://github.com/leafiy/Simple-iOS-style-Toggle-Switch-with-CSS3-jquery/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/leafiy/Simple-iOS-style-Toggle-Switch-with-CSS3-jquery/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/leafiy/Simple-iOS-style-Toggle-Switch-with-CSS3-jquery">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a name="simple-ios-style-toggle-switch-with-css3-jquery" class="anchor" href="#simple-ios-style-toggle-switch-with-css3-jquery"><span class="octicon octicon-link"></span></a>Simple-iOS-style-Toggle-Switch-with-CSS3-jquery</h1>
 
@@ -38,17 +35,12 @@
 
 <p>Demo</p>
       </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Simple-ios-style-toggle-switch-with-css3-jquery maintained by <a href="https://github.com/leafiy">leafiy</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      <footer>
+        <p>This project is maintained by <a href="https://github.com/leafiy">leafiy</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
-
+    <script src="javascripts/scale.fix.js"></script>
     
-
   </body>
 </html>
