First pages commit

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<h3>Simple iOS style Toggle-Switch with CSS3 & jquery</h3>
 			<p>all animation control by css3 translate, really smooth than css-position</p>
 			<p>
-				<a class="btn btn-primary" role="button">download</a>
+				<a class="btn btn-primary" href="https://github.com/leafiy/Simple-iOS-style-Toggle-Switch-with-CSS3-jquery/archive/master.zip" role="button">download</a>
 			</p>
 		</div>
 
